# financial-abm-lab

./: .gitignore  AGENT_PROMPT.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  config.yaml  harness.sh  lm_tree.html  mg_tree.html  ontology.md  progress.md  pyproject.toml
.claude/: settings.local.json
.specify/: init-options.json
dashboard/: index.html  markets.html  research.html
data/: literature_methods.json
docs/: 2026-07-02-branch-audit-fingerprint-atlas.md  2026-07-02-branch-findings-full.json  CELL_VALIDITY_AUDIT.md  FINAL_REPORT.md  PRISM_REQUIREMENTS.md  SMUGGLING_AUDIT.md  architecture.md  backbone_parity.md  canon_atlas_next_actions.md  experimental_design_v0.1.md  experimental_design_v0.2.md  experimental_design_v0.3.md  getting_started.md  model_contract_v0.md  model_contract_v1.md  program_claims_v1.md  refs_execution_algorithms.md  refs_sg_lob_code_semantics.md  research-design.md  working_paper_batch_identification_v0.md  working_paper_identification_obstacle_v0.md
experiments/: __init__.py
imported/ABM-Microstructure/: .gitignore  CLAUDE.md  ontology.md  pyproject.toml
imported/ABM-Microstructure/.claude/skills/speckit-specify/: SKILL.md
imported/ABM-Microstructure/.specify/: feature.json  integration.json
imported/ABM-Microstructure/.specify/integrations/: claude.manifest.json  speckit.manifest.json
imported/ABM-Microstructure/.specify/workflows/: workflow-registry.json
imported/ABM-Microstructure/docs/: research-design-review.md  research-design.md
imported/ABM-Microstructure/docs/adr/: 0001-no-abm-framework.md
imported/ABM-Microstructure/docs/findings/: 0001-batch-collusion-crossover.md  0002-sparse-reward-convergence.md  0002a-incident-tier3-key-collision.md  0002b-incident-ledger-snapshot.md
imported/ABM-Microstructure/docs/paper/: p2-skeleton.md
imported/ABM-Microstructure/scripts/: bcs_per_seed.py  generate_diagrams.sh  run_attribution.py  run_sweep.py
imported/ABM-Microstructure/specs/001-exp-a-clob-harness/: data-model.md  plan.md  quickstart.md  research.md  spec.md
imported/ABM-Microstructure/specs/001-exp-a-clob-harness/checklists/: requirements.md
imported/ABM-Microstructure/specs/001-exp-a-clob-harness/contracts/: sim-interface.md
imported/ABM-Microstructure/specs/002-exp-b-collusion-harness/: calibration.md  data-model.md  plan.md  prereg-density-spoke.md  prereg-tier3.md  prereg-us4-bcs.md  quickstart.md  research.md  tasks.md
imported/ABM-Microstructure/specs/002-exp-b-collusion-harness/checklists/: requirements.md
imported/ABM-Microstructure/specs/002-exp-b-collusion-harness/contracts/: learning-interface.md
imported/ABM-Microstructure/src/microstructure/: __init__.py  agents.py  anchors.py  benchmarks.py  book.py  calibrations.py  config.py  designmap.py  engine.py  metrics.py  qlearn.py  verdict.py
imported/ABM-Microstructure/tests/: test_anchors_match.py  test_clearing.py  test_continuous_vs_batch.py  test_design_comparison.py  test_designmap.py  test_determinism.py  test_env_mechanics.py  test_incentive.py  test_qlearn_sanity.py  test_us1_pipeline.py  test_verdict_gate.py
imported/PROV-ABM-atlas/: .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml
imported/PROV-ABM-atlas/atlas/: README.md  __init__.py  protocols.py
imported/PROV-ABM-atlas/docs/: program_claims_v1.md  prov_abm_design_notes.md  realdata_method_and_p3_coherence.md  working_paper_batch_identification_v0.md  working_paper_identification_obstacle_v0.md
imported/PROV-ABM-atlas/docs/findings/: 0001-channel-decoupling-band.md  0002-orderbook-channel-independence.md
imported/PROV-ABM-atlas/experiments/conf/agents/: H.yaml  T.yaml
imported/PROV-ABM-atlas/experiments/runners/: __init__.py  band_analyses.py  calibrate_search.py  run_one.py
imported/PROV-ABM-atlas/provabm/: ctx.py  validator.py
imported/PROV-ABM-atlas/scripts/: reproduce.sh
imported/PROV-ABM-atlas/tests/integration/: test_smoke.py
imported/PROV-ABM-atlas/tests/unit/: test_channel_band.py  test_classifiers.py  test_kernel_faithful.py  test_market.py  test_package_skeleton.py  test_provenance.py
imported/PROV-ABM-atlas/toy/: __init__.py  calibration.py  channel_band.py  intervention.py  kernel.py  market.py
imported/PROV-ABM-atlas/toy/agents/: __init__.py  herd.py  trend.py
imported/PROV-ABM-atlas/toy/models/: __init__.py  ci.py  fw.py  sg.py
notes/: 口述試験準備.md
obsidian_ABM_microstructure/: 00 claude engineering playbook.md.md
playground/: yh004.html  yh005.html  yh006.html
provabm/: __init__.py  capture.py  provenance.py  reach.py
scratch/: yh008_concept.txt
scripts/: ftt_did_threshold.py  generate_diagrams.sh  generate_paper_figures.py  research_expand_stocks.py  run_design_map.py
specs/: 001-monorepo-consolidation.md  002-minimum-viable-arena.md  002-yh007-kronos-microstructure.md  003-yh007-8-self-organized-book.md
state_atlas/: config.py  pipeline.py
tests/: foundational_abm_ids.txt  test_arxiv_ingest.py  test_benchmarks.py  test_budish_anchor.py  test_canon_atlas.py  test_canon_ingest.py  test_citation_and_draft.py  test_classical_parity.py  test_coverage.py  test_dashboard.py  test_designmap.py  test_features.py  test_fingerprint_atlas.py  test_gap_finder.py  test_gap_propose.py  test_genealogy.py  test_glossary.py  test_i18n.py  test_idea.py  test_inverse_abm.py  test_literature_map.py  test_llm_client.py  test_methods.py  test_openalex.py  test_preference.py  test_propose.py  (+17 more)
(+427 files in other folders)
