[project]
name = "financial-abm-lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "polars",
    "scipy",
    "statsmodels",
    "matplotlib",
    "pydantic",
    "pyyaml",
    "pyarrow",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "ipykernel",
]