[project]
name = "financial-abm-lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "polars",
    "scipy",
    "statsmodels",
    "matplotlib",
    "pydantic",
    "pyyaml",
    "pyarrow",
    "tqdm",
    "abm-models",
    "stylized-facts",
    "provenance",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "ipykernel",
]

# --- uv workspace (spec 001 C1): packages/ 配下を共有コアとして管理 ---
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
abm-models = { workspace = true }
stylized-facts = { workspace = true }
provenance = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
addopts = "-q"
markers = ["slow: 重い実行 (T=20000 等)。CI 既定では除外"]