[project]
name = "financial-abm-lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "polars",
    "scipy",
    "statsmodels",
    "matplotlib",
    "pydantic",
    "pyyaml",
    "pyarrow",
    "tqdm",
    "abm-models",
    "stylized-facts",
    "provenance",
    "fingerprint-atlas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "ipykernel",
]
# #36: imported/speculation-game-info の YH005/YH006 テストは pams を要する。
# CI の experiments ジョブでこの extra を入れて自動検証する。
experiments = [
    "pams==0.2.2",
]

# --- uv workspace (spec 001 C1): packages/ 配下を共有コアとして管理 ---
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
abm-models = { workspace = true }
stylized-facts = { workspace = true }
provenance = { workspace = true }
fingerprint-atlas = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
addopts = "-q"
markers = ["slow: 重い実行 (T=20000 等)。CI 既定では除外"]