[project]
name = "real-prism"
version = "0.1.0"
description = "真・PRISM toy + PROV-ABM/Atlas framework — toy validation of the intervention-response discriminative premise"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yuito Hasegawa" }]

# CLAUDE.md「技術選択」の全依存を宣言する(v0 で未使用のものも含め固定する方針)。
dependencies = [
    "numpy>=1.26",
    "numba>=0.60",
    "pandas>=2.2",
    "pyarrow>=16",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "uuid6>=2024.1.12",      # uuid7 を提供(stdlib に無い)
    "snakemake>=8.0",        # workflow DAG(experiments/Snakefile、後続 week)
    "torch>=2.2",            # 1D-CNN discriminator(Week3+)
    "xgboost>=2.0",          # IR classifier(Week6)
    "arch>=7.0",             # GARCH 推定(SF4)
    "statsmodels>=0.14",     # ACF など(SF1/SF2)
    "scikit-learn>=1.4",     # LR classifier(Week3)
]

[project.optional-dependencies]
# 重い ML/workflow 依存を分離したい利用者向けの別経路(既定は全部入り)。
ml = ["torch>=2.2", "xgboost>=2.0", "scikit-learn>=1.4"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "black>=24.0",
    "pre-commit>=3.7",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["provabm", "atlas", "toy"]

# ---------------------------------------------------------------------------
# tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["provabm", "atlas", "toy", "experiments", "tests"]
# toy/models は PRISM から vanilla 移植した外部正準モデル。整形・型は原典のまま保持。
extend-exclude = ["toy/models"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# RUF001-003: 日本語の全角記号(×・括弧・等)を ambiguous-unicode として誤検出するため無効化。
# 本リポは spec/docstring が日本語前提(CLAUDE.md)。
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["provabm", "atlas", "toy"]
# toy/models は vanilla 移植の外部コード(原典のまま)。strict 型検査の対象外。
exclude = ["toy/models/"]
# 第三者ライブラリの型 stub 欠如で strict が落ちないようにする。
[[tool.mypy.overrides]]
module = [
    "numba.*",
    "torch.*",
    "xgboost.*",
    "arch.*",
    "statsmodels.*",
    "snakemake.*",
    "uuid6.*",
    "hydra.*",
    "pyarrow.*",
    "sklearn.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: end-to-end smoke tests (may be slower)",
    "slow: slow tests (e.g. CNN training); deselect with -m 'not slow'",
]
